--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,19 @@
-.container {
+html, body {
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+.app {
   text-align: center;
   font-family: sans-serif;
+  background-color: transparent;
+  height: 100%;
+  width: 100%;
+}
+.editor {
+  text-align: left;
+  background-color: transparent;
+  height: 100%;
 }
