--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,11 @@ html, body {
   margin: 0;
   padding: 0;
 }
+
 #root {
   height: 100%;
 }
+
 .app {
   text-align: center;
   font-family: sans-serif;
@@ -15,16 +17,70 @@ html, body {
   height: 100%;
   width: 100%;
   display: flex;
+  overflow-y: hidden;
 }
+
 .editor-wrapper {
   flex: 0 0 50%;
   text-align: left;
   background-color: transparent;
   height: 100%;
+  padding: 0 12px 0 0;
 }
+
+.editor-wrapper .cm-scroller::-webkit-scrollbar {
+  width: 7px;
+} 
+
+.editor-wrapper .cm-scroller::-webkit-scrollbar-track {
+  background-color: transparent;
+} 
+
+.editor-wrapper .cm-scroller::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgba(128, 128, 128, 0.363);
+} 
+
 .preview-wrapper {
-  flex: 0 0 50%;
+  width: 100%;
   height: 100%;
   text-align: left;
-  color: rgba(255, 255, 255, 0.563);
+  font-size: 14px; /* make it same as codemirror */
+  padding: 0 12px 0 12px;
+  border-left: solid 1px rgba(221, 221, 221, 0.12);
+  overflow-y: auto;
+}
+
+.preview-wrapper::-webkit-scrollbar {
+  width: 7px;
+} 
+
+.preview-wrapper::-webkit-scrollbar-track {
+  background-color: transparent;
+} 
+
+.preview-wrapper::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgba(128, 128, 128, 0.363);
+} 
+
+.preview-wrapper.markdown-body.dark {
+  background-color: transparent;
+  color: white;
+}
+
+.preview-wrapper.markdown-body.dark pre code {
+  color: black;
+}
+
+.preview-wrapper.markdown-body.dark blockquote p{
+  color: white;
+}
+
+.preview-wrapper.markdown-body.dark img{
+  max-width: 80%;
+}
+
+.preview-wrapper.markdown-body.dark table{
+  color: black;
 }
